--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <META http-equiv="X-UA-Compatible" content="IE=8">
     <TITLE>Federal LOCCS Form</TITLE>
 
-    <script type="text/javascript" src="/js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 
     <STYLE type="text/css">
     body {
@@ -1906,7 +1906,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr13 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15">XXXX</P>
                 </TD>
             </TR>
             <TR>
@@ -3243,85 +3243,6 @@
                 </TD>
             </TR>
         </TABLE>
-    </DIV>
-    <DIV id="page_2">
-        <DIV id="dimg1">
-            <IMG src="27053-a_LOCCS_images/27053-a_LOCCS2x1.jpg" id="img1">
-        </DIV>
-
-
-        <DIV class="dclr"></DIV>
-        <DIV id="id_1">
-            <P class="p18 ft31">Public reporting burden for this collection of information is estimated to average 15 minutes per response, including the time for reviewing instructions, searching existing data sources, gathering and maintaining the data needed, and completing and reviewing the collection of information. This agency may not collect this information, and you are not required to complete this form, unless it displays a currently valid OMB control number.</P>
-            <P class="p18 ft31">This information collection is to request payment of grant funds or to designate the appropriate officials who can have access to HUD voice activated payment system. The HUD voice activated payment system has been especially designed to help the recipient when calling in for a request of funds and improves the payment process so the recipient will know right away whether their request will be paid or not. This information collection is required under 24 CFR Subpart C, 85.21 - Post Award Requirements, the information collection is needed in order to obtain or retain a benefit.</P>
-            <P class="p19 ft32">Instructions for the Request Voucher for Grant Payment for the Special Needs Assistance Program (SNAPs)</P>
-        </DIV>
-        <DIV id="id_2">
-            <DIV id="id_2_1">
-                <P class="p20 ft15">Item 1.
-                    <SPAN class="ft1">Voucher Number: </SPAN>The first 3 digits are the prefix to your program. Enter "
-                    <SPAN class="ft1">001</SPAN>" if grant funds are being requested for a grant awarded under a SHDP or SHP (TH, PH, SAFAH and Renewal) grant. Enter "
-                    <SPAN class="ft1">038</SPAN>" if funds are being requested for a Housing Opportunity for Persons with AIDs (HOPWA) competitive grant. Enter "
-                    <SPAN class="ft1">054</SPAN>" if funds are being requested for an Innovative Housing Program (IHP) grant. (If you do not know your
-                    <NOBR>3-digit</NOBR> program prefix, contact your local Field Office.) The remaining 6 digits will be assigned by LOCCS/VRS during the telephone call. The entire
-                    <NOBR>9-digit</NOBR> number will have to be entered prior to ending the call.</P>
-                <P class="p21 ft15">Item 2.
-                    <SPAN class="ft1">LOCCS Program Area: </SPAN>Circle "
-                    <SPAN class="ft1">SNAP</SPAN>" (001) for SHDP and SHP grant requests, "
-                    <SPAN class="ft1">HPAC</SPAN>" (038) for HOPWA competitive grant requests, and "
-                    <SPAN class="ft1">IHP</SPAN>" (054) for Innova- tive Homeless Programs.</P>
-                <P class="p22 ft1">
-                    <SPAN class="ft15">Item 3. </SPAN>Enter the period covered by this request
-                    <SPAN class="ft15">.</SPAN>
-                </P>
-                <P class="p23 ft15">Item 4.
-                    <SPAN class="ft1">Type of Disbursement: </SPAN>Check "partial" until the final request for grant funds is made.</P>
-                <P class="p24 ft15">Item 5.
-                    <SPAN class="ft1">Voice Response No: </SPAN>Enter the 10 digit Voice Response System (VRS) project number which was sent to you by mail. Your regular HUD project number will be repeated back for verification after the VRS project number is entered.</P>
-            </DIV>
-            <DIV id="id_2_2">
-                <P class="p25 ft15">Item 6.
-                    <SPAN class="ft1">Grantee Organization’s Name: </SPAN>Enter the name of the organization requesting funds. It must be the same name that appears on the Grant Agreement.</P>
-                <P class="p26 ft1">
-                    <SPAN class="ft15">Item 6a. </SPAN>Grantee Organization's Tax Identification No:
-                    <SPAN class="ft15">Enter the tax (employer) Identification Number (TIN).</SPAN>
-                </P>
-                <P class="p27 ft15">Item 7. Not applicable.</P>
-                <P class="p26 ft15">Item 8.
-                    <SPAN class="ft1">Grant Number: </SPAN>Enter the project number that appears on the Grant Agreement.</P>
-                <P class="p28 ft2">Item 9.
-                    <SPAN class="ft30">Type of Funds Requested: </SPAN>SNAPs grant VRS draw- downs are directed against specific funding categories called Budget Line Item (BLIs). LOCCS associates a 4- digit number with each line item. Enter the amount requested in each category (lines 1010 through 1120) and the total funds requested under item 10, Voucher Total.</P>
-                <P class="p29 ft2">Item 11.
-                    <SPAN class="ft30">Name & phone number </SPAN>(including area code) of the authorized person who completed the
-                    <NOBR>call-in</NOBR> to VRS. The authorized person is shown on line 3 of form
-                    <NOBR>HUD-27054.</NOBR>
-                </P>
-                <P class="p30 ft15">Item 12.
-                    <SPAN class="ft1">Signature </SPAN>of the person identified in item 11.</P>
-                <P class="p26 ft15">Item 13.
-                    <SPAN class="ft1">Date of this Request: </SPAN>Enter the date of the
-                    <NOBR>call-in</NOBR> to request funds.</P>
-            </DIV>
-        </DIV>
-        <DIV id="id_3">
-            <TABLE cellpadding=0 cellspacing=0 class="t3">
-                <TR>
-                    <TD class="tr21 td90">
-                        <P class="p0 ft30">Retain this form in your records for audit purposes</P>
-                    </TD>
-                    <TD class="tr21 td91">
-                        <P class="p0 ft2">page 2 of 2</P>
-                    </TD>
-                    <TD class="tr21 td92">
-                        <P class="p0 ft30">
-                            <SPAN class="ft2">form </SPAN>
-                            <NOBR>HUD-27053-A</NOBR>
-                            <SPAN class="ft2">(2/95)</SPAN>
-                        </P>
-                    </TD>
-                </TR>
-            </TABLE>
-        </DIV>
     </DIV>
 
     <script type="text/javascript">
