Adding HTML IDs, parsing query string params

--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@
                     <P class="p4 ft14">SNAP HPAC</P>
                 </TD>
                 <TD class="tr7 td7">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p0 ft8" id="service_period">June-14</P>
                 </TD>
                 <TD class="tr7 td8">
                     <P class="p0 ft8">&nbsp;</P>
@@ -1906,7 +1906,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr13 td3">
-                    <P class="p12 ft15">XXXX</P>
+                    <P class="p12 ft15" id="acquisition"></P>
                 </TD>
             </TR>
             <TR>
@@ -1973,7 +1973,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="rehabilitation"></P>
                 </TD>
             </TR>
             <TR>
@@ -2040,7 +2040,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="new_construction"></P>
                 </TD>
             </TR>
             <TR>
@@ -2107,7 +2107,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr13 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="substantial_rehabilitation"></P>
                 </TD>
             </TR>
             <TR>
@@ -2174,7 +2174,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="moderate_rehabilitation"></P>
                 </TD>
             </TR>
             <TR>
@@ -2241,7 +2241,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="operating_cost"></P>
                 </TD>
             </TR>
             <TR>
@@ -2308,7 +2308,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="rental_assistance"></P>
                 </TD>
             </TR>
             <TR>
@@ -2375,7 +2375,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="supportive_services"></P>
                 </TD>
             </TR>
             <TR>
@@ -2424,7 +2424,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD colspan=10 class="tr19 td80">
-                    <P class="p9 ft15">Administrative Cost</P>
+                    <P class="p9 ft15">Administrative Cost <span id="administrative_cost_details"></span></P>
                 </TD>
                 <TD class="tr19 td7">
                     <P class="p0 ft8">&nbsp;</P>
@@ -2442,7 +2442,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="administrative_cost"></P>
                 </TD>
             </TR>
             <TR>
@@ -2509,7 +2509,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="child_care"></P>
                 </TD>
             </TR>
             <TR>
@@ -2576,7 +2576,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr19 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="employment_assistance"></P>
                 </TD>
             </TR>
             <TR>
@@ -2643,7 +2643,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="relocation"></P>
                 </TD>
             </TR>
             <TR>
@@ -2710,7 +2710,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="leasing"></P>
                 </TD>
             </TR>
             <TR>
@@ -2777,7 +2777,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="repair_and_maintenance"></P>
                 </TD>
             </TR>
             <TR>
@@ -2844,7 +2844,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="prevention"></P>
                 </TD>
             </TR>
             <TR>
@@ -2911,7 +2911,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="capacity_building"></P>
                 </TD>
             </TR>
             <TR>
@@ -2978,7 +2978,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p12 ft15" id="other"></P>
                 </TD>
             </TR>
             <TR>
@@ -3105,7 +3105,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD class="tr0 td3">
-                    <P class="p12 ft26">0</P>
+                    <P class="p12 ft26"><span id="voucher_total">0</span></P>
                 </TD>
             </TR>
             <TR>
@@ -3248,11 +3248,30 @@
     <script type="text/javascript">
 
       //<![CDATA[
+
+      function parseParameters(val) {
+          var result = "Not found",
+              tmp = [];
+          var items = location.search.substr(1).split("&");
+          for (var index = 0; index < items.length; index++) {
+              tmp = items[index].split("=");
+              if (tmp[0] === val) result = decodeURIComponent(tmp[1]);
+          }
+          return result;
+      }
+
       $(document).ready(function(e) {
 
         console.log('hello!');
 
+        var query_string = window.location.search.replace("?", "");
+
+        var params = parseParameters(query_string);
+
+        console.log(query_string, params);
+
       });
+
       //]]>
 
 
