--- a/index.html
+++ b/index.html
@@ -1732,7 +1732,7 @@
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
                 <TD colspan=3 class="tr14 td11">
-                    <P class="p0 ft8">&nbsp;</P>
+                    <P class="p4 ft12"><span id="grant_id"></span></P>
                 </TD>
                 <TD class="tr14 td12">
                     <P class="p0 ft8">&nbsp;</P>
@@ -3249,8 +3249,8 @@
 
       //<![CDATA[
 
-      function parseParameters(val) {
-          var result = "Not found",
+      function parseParam(val) {
+          var result = '',
               tmp = [];
           var items = location.search.substr(1).split("&");
           for (var index = 0; index < items.length; index++) {
@@ -3262,13 +3262,44 @@
 
       $(document).ready(function(e) {
 
-        console.log('hello!');
+        var grant_id,
+          allocations = [];
 
-        var query_string = window.location.search.replace("?", "");
+        try {
 
-        var params = parseParameters(query_string);
+          var grant_id = parseParam('grant_id');
 
-        console.log(query_string, params);
+          if (!grant_id) {
+
+            throw new Error('The Grant ID could not be found!');
+
+          } else {
+
+            $('#grant_id').text(grant_id);
+
+            params = [
+              'supportive_services',
+              'operations',
+              'provider_admin',
+              'homeless_trust_admin',
+              'leasing',
+              'hmis',
+              'rental_assistance'
+            ];
+
+            allocations.forEach(function(index, val) {
+
+              console.log(val);
+
+            });
+
+          }
+
+        } catch(err) {
+
+          alert(err.message);
+
+        }
 
       });
 
