Fixing foreach call

--- a/index.html
+++ b/index.html
@@ -3289,7 +3289,7 @@
 
           var queryParam;
 
-          params.forEach(function(index, val) {
+          params.forEach(function(val, index) {
 
             queryValue = parseParam(val);
 
