--- a/index.html
+++ b/index.html
@@ -3284,7 +3284,7 @@
             'leasing',
             'hmis',
             'rental_assistance',
-            'total'
+            'voucher_total'
           ];
 
 
