Adding bold style to cost details

--- a/index.html
+++ b/index.html
@@ -2417,20 +2417,8 @@
                 <TD class="tr19 td74">
                     <P class="p0 ft8">&nbsp;</P>
                 </TD>
-                <TD colspan=10 class="tr19 td80">
-                    <P class="p9 ft15">Administrative Cost <span id="administrative_cost_details"></span></P>
-                </TD>
-                <TD class="tr19 td7">
-                    <P class="p0 ft8">&nbsp;</P>
-                </TD>
-                <TD class="tr19 td8">
-                    <P class="p0 ft8">&nbsp;</P>
-                </TD>
-                <TD class="tr19 td4">
-                    <P class="p0 ft8">&nbsp;</P>
-                </TD>
-                <TD class="tr19 td75">
-                    <P class="p0 ft8">&nbsp;</P>
+                <TD colspan=14 class="tr19 td80">
+                    <P class="p9 ft15">Administrative Cost <span style="font-weight:bold" id="administrative_cost_details"></span></P>
                 </TD>
                 <TD class="tr19 td6">
                     <P class="p0 ft8">&nbsp;</P>
