Adding provider/project name to LOCCS, adding Excel Builder libs

--- a/check_request.html
+++ b/check_request.html
@@ -2,7 +2,7 @@
 <html ng-app="mdDocApp" class="ng-scope">
 
   <head>
-      <base href="http://cheyner.github.io/zengine-md-invoice-docs/">
+      <base href="https://cheyner.github.io/zengine-md-invoice-docs/">
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=8">
       <title>Miami Dade Check Request Form</title>
