--- a/loccs.html
+++ b/loccs.html
@@ -2,7 +2,7 @@
 <HTML ng-app="mdDocApp" class="ng-scope">
 
 <HEAD>
-    <base href="http://cheyner.github.io/zengine-md-invoice-docs/">
+    <base href="https://cheyner.github.io/zengine-md-invoice-docs/">
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <META http-equiv="X-UA-Compatible" content="IE=8">
     <TITLE>Federal LOCCS Form</TITLE>
@@ -21,6 +21,8 @@
 
     <input type="text" ng-model="params.service_period" id="service_period" />
     <input type="text" ng-model="params.grant_id" id="grant_id" />
+    <input type="text" ng-model="params.project" id="project" />
+    <input type="text" ng-model="params.provider" id="provider" />
 
     <div id="amount-inputs">
 
