--- a/loccs.html
+++ b/loccs.html
@@ -3,6 +3,7 @@
 
 <HEAD>
     <base href="https://cheyner.github.io/zengine-md-invoice-docs/">
+    <!-- <base href="http://127.0.0.1:4000/"> -->
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <META http-equiv="X-UA-Compatible" content="IE=8">
     <TITLE>Federal LOCCS Form</TITLE>
@@ -23,6 +24,7 @@
     <input type="text" ng-model="params.grant_id" id="grant_id" />
     <input type="text" ng-model="params.project" id="project" />
     <input type="text" ng-model="params.provider" id="provider" />
+    <input type="text" ng-model="params.snaps" id="snaps" />
 
     <div id="amount-inputs">
 
