--- a/check_request.html
+++ b/check_request.html
@@ -36,6 +36,10 @@
           text-align: left;
         }
 
+        #is-adjustment input {
+          width: auto;
+        }
+
         .notes {
           width:500px;
           border:1px solid #ddd;
