--- a/drawdown.html
+++ b/drawdown.html
@@ -16,6 +16,10 @@
 
       <style>
 
+        .vertical-table {
+            width: 100%;
+        }
+
         .vertical-table th {
           text-align: right;
           width:140px;
@@ -25,10 +29,6 @@
         .vertical-table td {
           text-align: left;
           padding-left: 5px;
-        }
-
-        .vertical-table input {
-          width: 200px;
         }
 
         input {
@@ -75,7 +75,7 @@
 
       <div class="row" style="margin-bottom:20px;">
 
-        <div class="col-xs-8">
+        <div class="col-xs-5">
 
           <h2>
             Miami Dade County
@@ -94,7 +94,7 @@
 
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-7">
 
           <h1>Drawdown</h1>
 
@@ -108,7 +108,7 @@
                 </tr>
                 <tr>
                   <th>AMOUNT:</th>
-                  <td><input type="text" ng-model="params.amount | currency" /></td>
+                  <td><input type="text" ng-model="params.amount" currency /></td>
                 </tr>
                 <tr>
                   <th>FROM:</th>
@@ -175,7 +175,7 @@
             <td style="width:100px;"><input type="text" style="width:90px;" /></td>
             <td>on file</td>
             <td><input type="text" value="2696206696688" /></td>
-            <td><input type="text" ng-model="params.amount | currency" /></td>
+            <td><input type="text" ng-model="params.amount" currency /></td>
             <td><input type="text" /></td>
           </tr>
         </tbody>
