--- a/drawdown.html
+++ b/drawdown.html
@@ -159,7 +159,7 @@
 
         <thead>
           <tr class="active">
-            <th colspan="5">DRAWDOWN</th>
+            <th colspan="6">DRAWDOWN</th>
           </tr>
           <tr class="info">
             <th>DATE</th>
@@ -167,6 +167,7 @@
             <th>BANK A/C#</th>
             <th>AMOUNT</th>
             <th>GRANT NAME</th>
+            <th>VOUCHER NO.</th>
           </tr>
         </thead>
 
@@ -176,6 +177,7 @@
             <td>on file</td>
             <td><input type="text" value="2696206696688" /></td>
             <td><input type="text" ng-model="params.amount" currency /></td>
+            <td><input type="text" /></td>
             <td><input type="text" /></td>
           </tr>
         </tbody>
