--- a/loccs.html
+++ b/loccs.html
@@ -22,6 +22,8 @@
 
     <input type="text" ng-model="params.service_period" id="service_period" />
     <input type="text" ng-model="params.grant_id" id="grant_id" />
+    <input type="text" value="Miami-Dade County" id="grantee_org" />
+    <input type="text" value="59-6000573" id="grantee_tin" />
     <input type="text" ng-model="params.project" id="project" />
     <input type="text" ng-model="params.provider" id="provider" />
     <input type="text" ng-model="params.snaps" id="snaps" />
