Adding checkbox to loccs form

--- a/loccs.html
+++ b/loccs.html
@@ -20,6 +20,18 @@
 
     <img src="loccs-form.jpg" style="width:950px;" />
 
+    <div class="checkbox" id="disbursement_partial">
+
+        <input type="checkbox" name="disbursement" value="partial" />
+
+    </div>
+
+    <div class="checkbox" id="disbursement_final">
+
+        <input type="checkbox" name="disbursement" value="final" />
+
+    </div>
+
     <input type="text" ng-model="params.service_period" id="service_period" />
     <input type="text" ng-model="params.grant_id" id="grant_id" />
     <input type="text" value="Miami-Dade County" id="grantee_org" />
