Adding default values

--- a/drawdown.html
+++ b/drawdown.html
@@ -82,7 +82,11 @@
             <br /><small>Department:  Homeless Trust</small>
           </h2>
 
-          <textarea rows="4" style="border:1px solid #000; width:300px; padding: 2px;">TO:</textarea>
+          <textarea rows="4" style="border:1px solid #000; width:300px; padding: 2px;">TO:
+            Mariela Gomez
+            Director of Cash Management
+            305-375-5134
+          </textarea>
 
           <div class="checkbox">
             <label>
@@ -177,7 +181,7 @@
             <td>on file</td>
             <td><input type="text" value="2696206696688" /></td>
             <td><input type="text" ng-model="params.amount" currency /></td>
-            <td><input type="text" /></td>
+            <td><input type="text" value="2013 CoC Award" /></td>
             <td><input type="text" /></td>
           </tr>
         </tbody>
@@ -205,8 +209,8 @@
             <td><input type="text" value="USHUD" /></td>
             <td><input type="text" value="A.L. Bellini" /></td>
             <td><input type="text" value="305-536-5678" /></td>
-            <td><input type="text" /></td>
-            <td><input type="text" /></td>
+            <td><input type="text" value="HTR" /></td>
+            <td><input type="text" value="HT" /></td>
             <td><input type="text"  value="108" /></td>
           </tr>
           <tr>
