Fixing textarea default

--- a/drawdown.html
+++ b/drawdown.html
@@ -82,11 +82,10 @@
             <br /><small>Department:  Homeless Trust</small>
           </h2>
 
-          <textarea rows="4" style="border:1px solid #000; width:300px; padding: 2px;">TO:
-            Mariela Gomez
-            Director of Cash Management
-            305-375-5134
-          </textarea>
+<textarea rows="4" style="border:1px solid #000; width:300px; padding: 2px;">TO:
+Mariela Gomez
+Director of Cash Management
+305-375-5134</textarea>
 
           <div class="checkbox">
             <label>
