Adding corporate address field

--- a/check_request.html
+++ b/check_request.html
@@ -99,9 +99,16 @@
             </tr>
 
             <tr>
-              <th>Provider Mailing Address</th>
+              <th>Provider Local Address</th>
               <td>
                 <input type="text" ng-model="params.provider_address" />
+              </td>
+            </tr>
+
+            <tr>
+              <th>Provider Corp. Address</th>
+              <td>
+                <input type="text" ng-model="params.provider_corporate_address" />
               </td>
             </tr>
 
