--- a/report.html
+++ b/report.html
@@ -197,7 +197,7 @@
 
                         request_date = new Date(payment[Reporter.fieldMap.payment_request.received]).getTime();
 
-                        if (payment[Reporter.fieldMap.payment_request.status] === 'Paid') {
+                        if (payment[Reporter.fieldMap.payment_request.status] === 'Paid' || payment[Reporter.fieldMap.payment_request.status] === 'Submitted to Finance') {
 
                             stats.drawnTotal += Number(payment[Reporter.fieldMap.payment_request.drawdown]);
 
