Adding alert to check request form

--- a/check_request.html
+++ b/check_request.html
@@ -201,6 +201,8 @@
           <br />
           Date Submitted To Finance:  _______________________
 
+          <h4>ALL BACK-UP DOCUMENTATION MAINTAINED AT THE DEPARTMENT</h4>
+
         </div>
 
       </div>
